[metadata]
author = Faster Speeding
author_email = lucina@lmbyrne.dev
name = hikari-yuyo
url = https://github.com/FasterSpeeding/Tanjun
version = 0.0.3a7
description = A collection of utility classes and functions for use with Hikari
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hikari
license = BSD 3-Clause License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Chat
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
include_package_data = True
package_data= yuyo: [py.typed]
packages = find:
install_requires = hikari~=2.0.0.dev101
python_requires = >=3.8.0,<3.12

[options.packages.find]
where=yuyo
